<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:id="@+id/imageView"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_2"
            android:textSize="15sp"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp"
            />

        <ImageButton
            android:id="@+id/downVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/downvote_button"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_downward_black_24dp"/>

        <ImageButton
            android:id="@+id/upVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/downVote"
            android:contentDescription="@string/upvote_button"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:background="?selectableItemBackgroundBorderless"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>